--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Dark Medo Home</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="development of db applications" name="keywords">
+    <meta content="Development of DB Applications" name="description">
 
     <!-- Favicon -->
 
