--- a/lec2.html
+++ b/lec2.html
@@ -133,6 +133,6 @@
 
     <a href="lec3.html"><button>Next Lecture</button></a>
     <hr>
-    <p class="def">I am <span class="criti">Ahmed Almostafa</span> , if you find this article usefull; pray for me</p>
+    <p class="def">I am <span class="criti"><a href=https://www.linkedin.com/in/ahmed-almostafa-omer-589317203/">Ahmed Almostafa</a></span> , if you find this article usefull; pray for me</p>
 </body>
 </html>
