--- a/lec1.html
+++ b/lec1.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="row border-top px-xl-5">
             <div class="col-lg-9">
-                <a href="index.html"><h1 class="m-0"><span class="text-primary">Dark</span>Medo</h1></a>
+                <a href="index.html"><h1 class="m-0"><span class="text-primary">AA</span>Class</h1></a>
             </div>
         </div>
     </div>
